--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
-    <header>
+    <header class="container">
     <h1>
       <a href="index.html">Styles Conference</a>Styles Conference
-    </h1>
+    </h1> 
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 <nav>
     <a href="index.html">Home</a>
@@ -20,13 +20,13 @@
   </nav>
 
   </header>
-  <section>
-  <h2>Dedicated to the Craft of Building Websites</h2>
-  <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-<a href="register.html">Register Now</a>
+  <section class="hero container">
+    <h2>Dedicated to the Craft of Building Websites</h2>
+    <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+    <a class="btn btn-alt" href="register.html">Register Now</a>
 </section>
 
-<section>
+<section class="container">
 
   <section>
    <a href="speakers.html">
@@ -47,7 +47,7 @@
 </section>
 </section>
 
-<footer>
+<footer class="container">
  <small>&copy; Styles Conference</small>
 <nav>
     <a href="index.html">Home</a>
