--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
-    <header class="container">
-    <h1>
+    <header class="container group">
+    <h1 class="logo"></h1>>
       <a href="index.html">Styles Conference</a>Styles Conference
     </h1> 
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
@@ -47,7 +47,8 @@
 </section>
 </section>
 
-<footer class="container">
+<footer class="primary-footer container group">
+  
  <small>&copy; Styles Conference</small>
 <nav>
     <a href="index.html">Home</a>
