--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header class="container group">
-    <h1 class="logo"></h1>>
-      <a href="index.html">Styles Conference</a>Styles Conference
+    <h1 class="logo">
+      <a href="index.html">Styles<br> Conference</a>
     </h1> 
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 <nav>
