--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="container group">
     <h1 class="logo">
-      <a href="index.html">Styles<br> Conference</a>
+      <a href="index.html">Styles<br> Conference</a>   
     </h1> 
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 <nav>
@@ -26,21 +26,29 @@
     <a class="btn btn-alt" href="register.html">Register Now</a>
 </section>
 
-<section class="container">
+<section class="grid">
 
-  <section>
+  <!-- speakers -->
+
+  <section class="col-1-3">
    <a href="speakers.html">
     <h5>Speakers</h5>
     <h3>World-Class Speakers</h3>
    </a>
     <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-  </section>
-  <section>
+  </section><!--
+
+  Schedule
+
+--><section class="col-1-3">
 <h5>Schedule</h5>
 <h3>Three Inspiring days</h3>
 <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all around good times</p>
-  </section>
-<section>
+  </section><!---
+
+  Venue
+
+--><section class="col-1-3">
   <h5>Venue</h5>
   <h3> The Chicago Theatre</h3>
   <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
