--- a/speakers.html
+++ b/speakers.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Speakers - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+  <link rel="stylesheet"  href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
@@ -29,26 +29,21 @@
       </nav>
 
     </header>
+    <!-- Main content -->
 
-    <!-- Lead -->
+        <section class="row-alt">
+      <div class="lead container"></div>
 
-    <section class="row-alt">
-      <div class="lead container">
-
-        <h1>Speakers</h1>
-
-        <p>We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p>
-
-      </div>
+      <h1>Register</h1>
+    </div>
     </section>
-
     <!-- Footer -->
 
     <footer class="primary-footer container group">
 
       <small>&copy; Styles Conference</small>
 
-      <nav class="nav">
+      <nav>
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
